--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.7.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
@@ -32,10 +32,10 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "prisma": "^6.7.0",
     "tailwindcss": "^3.4.1"
   },
   "prisma": {
-  "seed": "node prisma/seed.js"
-}
-
+    "seed": "node prisma/seed.js"
+  }
 }
